<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:text="@string/android_ramp_up"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/click_me" />

        <ImageButton
            android:id="@+id/img_btn"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_below="@+id/btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/click" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="20dp"
            android:text="@string/enter_your_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="100dp"
            android:layout_toEndOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:text="@string/enter_your_lucky_number" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@id/tv_number"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_number"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/send_data" />

        <Button
            android:id="@+id/btn_sendObject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_number"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_send"
            android:text="@string/send_object" />

        <Button
            android:id="@+id/btn_asynTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_send"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/asyn_task" />

        <Button
            android:id="@+id/btn_getRetrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_send"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_asynTask"
            android:text="@string/retrofit_request" />

        <Button
            android:id="@+id/btn_Coordinator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_asynTask"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/co_ordinator_layout" />

        <Button
            android:id="@+id/btn_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_asynTask"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_Coordinator"
            android:text="@string/employee_details" />

        <Button
            android:id="@+id/btn_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Coordinator"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/empty_intent" />

        <Button
            android:id="@+id/btn_endlessList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Coordinator"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_empty"
            android:text="@string/endless_list" />

        <Button
            android:id="@+id/btn_deviceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Coordinator"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_endlessList"
            android:text="@string/device_id" />

        <Button
            android:id="@+id/btn_getMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_empty"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/get_message" />

        <TextView
            android:id="@+id/tv_getMessage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_empty"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/btn_empty" />

        <Button
            android:id="@+id/btn_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_getMessage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/database_task" />

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_getMessage"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_database"
            android:text="@string/push_notification" />

        <Button
            android:id="@+id/btn_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_notification"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/broadcast_receiver" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_notification"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_broadcast"
            android:text="@string/show_current_date" />

        <Button
            android:id="@+id/btn_fragmentNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_broadcast"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/fragment_activity" />

        <Button
            android:id="@+id/btn_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_date"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_fragmentNew"
            android:text="@string/go_to_fragment_activity" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_fragmentNew"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/open_camera" />

        <Button
            android:id="@+id/btn_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_fragment"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_camera"
            android:text="@string/service_activity" />

        <Button
            android:id="@+id/btn_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_camera"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/see_video" />

        <Button
            android:id="@+id/btn_post_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_camera"
            android:layout_toEndOf="@id/btn_video"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/post_retrofit" />

    </RelativeLayout>
</ScrollView>