<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <EditText
        android:id="@+id/deviceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000"
        android:hint="@string/device_type"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="#000"
        android:textColorHint="#000" />


    <EditText
        android:id="@+id/deviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000"
        android:hint="@string/device_id"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="#000"
        android:textColorHint="#000" />


    <EditText
        android:id="@+id/deviceOsVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000"
        android:hint="@string/device_os_version"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="#000"
        android:textColorHint="#000" />

    <Button
        android:id="@+id/sendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/send_data"
        android:textColor="#fff"
        android:textSize="17sp" />

</LinearLayout>